<resources>
    <string name="app_name">PatientAssistant</string>

    <string name="add_new">Add new</string>

    <string name="drug_details_dose_singular">%1$d tablet</string>
    <string name="drug_details_dose_plural">%1$d tablets</string>
    <string name="drug_details_interval_one_hour">every hour</string>
    <string name="drug_details_interval">every %1$d hours</string>

    <string name="error_required">This field is required</string>
    <string name="error_dose_lesser_equal_0">Dose cannot be 0 or less</string>
    <string name="error_dose_interval_lesser_equal_0">Dose interval cannot be 0 or less</string>

    <string name="drug_delete_dialog_title">Delete this drug?</string>
    <string name="drug_delete_dialog_message">Are you sure you want to delete this drug? You can not revert this action.</string>
    <string name="drug_add_new_title">Add drug to database</string>
    <string name="drug_details_title">Drug details</string>
    <string name="drug_edit_title">Edit drug</string>
    <string name="hint_drug_name">Drug name</string>
    <string name="hint_dose">Dose</string>
    <string name="hint_select_date">Time of first dose</string>
    <string name="hint_dose_interval">Dose interval</string>

    <string name="warning">Warning</string>
    <string name="submit">Submit</string>
    <string name="edit">edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">delete</string>
    <string name="hospitals">Hospitals</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_type">Place type</string>
    <string name="doctors">Doctors</string>
    <string name="dentists">Dentists</string>
    <string name="drug_stores">Drug stores</string>
    <string name="where_to_find_places">Where to find places</string>
    <string name="my_localization">My location</string>
    <string name="chosen_localization">Chosen location</string>
    <string name="find_places">Find places</string>
    <string name="type_location">Type location</string>
    <string name="drugs">Drugs</string>
    <string name="appointments">Appointments</string>

    <string name="appointment_reminders">Appointment Reminders</string>
    <string name="appointment_coming_up">You have an appointment coming up</string>

    <string name="medical_appointment_header">Medical appointment</string>
    <string name="edit_text_medical_appointment_title">Title</string>
    <string name="edit_text_medical_appointment_medical_facility">Medical facility</string>
    <string name="edit_text_medical_facility">Medical Facility</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_time">Time</string>

    <string name="drug_taking_notification_title">"Take your drug: %s!"</string>
    <string name="drug_taking_notification_content_text">"Dose: %s tablets"</string>
    <string name="notification_channel_name">"Take drug Reminders"</string>
    <string name="notification_description_text">"This channel sends reminders to take your drug"</string>

</resources>
